# CalSciPy

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  TRIALS_15_D_EM0566.gpl  TRIALS_15_D_EM0566.xml  build_docs.bat  build_docs_build.bat  build_docs_source.bat  build_rtd_requirements.bat  buildthedocs.yaml  code_check.bat  coverage.json  coverage.lcov  d.py  int_psf.py  make_test_images.py  psf  pyproject.toml  requirements.txt  source_targeting.py  target_loading.py  test_calib.py  test_calibration  test_parfocal.py  test_slm.py  time_script.py  tuple_conv.py  visualize_optogenetics.py
.github/workflows/: calscipy_action.yml  calscipy_code_coverage.yml  calscipy_lint_test_action.yml  main.yml  python-package.yml  requirements.txt
CalSciPy/: __init__.py  _backports.py  _calculations.py  _files.py  _logging_tools.py  _user.py  _validators.py  _visual.py  color_scheme.py  con_image.mplstyle  console.mplstyle  conversion.py  group_proj.py  imaging.py  io_tools.py  main.mplstyle  optogenetics.py  plots.py  pops.py  pub_image.mplstyle  publication.mplstyle  simulations.py  source_targeting.py  target_loading.py  validation.py
CalSciPy/_backports/: __init__.py  kw_dataclasses.py
CalSciPy/_dev/experimental/: prairie_link.py  visualize_optogenetics.py
CalSciPy/_dev/scratch_dev/: holo_test.py  stimulation_test.py  test_roi_tools.py
CalSciPy/_dev/tests/: test_misc.py
CalSciPy/_dev/variables/: dfof_sample_traces.npy  extended_sample_traces.npy
CalSciPy/bruker/: __init__.py  _helpers.py  config.ini  constants.py  converters.py  data.py  factories.py  helpers.py  loaders.py  parsers.py  protocols.py
CalSciPy/bruker/bruker/: data.py  factories.py  validation.py
CalSciPy/events/: __init__.py  events.py  firing_rates.py
CalSciPy/images/: __init__.py  deinterlacing.py  filters.py  projections.py
CalSciPy/interactive/: __init__.py  compare_image_overlay.py  compare_pre_post.py  image_comparison.py  interactive.py  p3.py  point_spread_function.py
CalSciPy/optics/: calibration.py  design.py  holo.py  intpsf  meadowlark.py  psf.py
CalSciPy/organization/: __init__.py  _logging_tools.py  experiment.py  files.py  imaging.py  imaging_experiment.py  old_trace_fear_experiment.py  prescreen_experiment.py  stimulation_experiment.py  subject.py
CalSciPy/roi_tools/: __init__.py  roi_tools.py  suite2p_handler.py
CalSciPy/traces/: __init__.py  b3.py  baseline.py  smoothing.py  tpp.py  traces.py
dev/: CalSciPy.roi_tools.roi_tools.rst  CalSciPy.roi_tools.suite2p_handler.rst
dev/experimental/: _image_processing_gpu.py  _interactive.py  image_processing.py  reorganization.py  trace_processing.py  visualize_optogenetics.py
dev/scratch_dev/: holo_test.py  spike_plot.py  stimulation_test.py  test_roi_tools.py  test_saved_series.py
dev/tests/: other_test_confs.py
dev/variables/: detrended_dfof_sample_traces.npy  dfof_ext_sample_traces.npy  dfof_small_sample_sample_traces.npy  sample_traces.npy  std_noise_sample_traces.npy
docs/: .readthedocs.yaml  build_clean.bat  build_docs_build.bat  build_docs_source.bat  build_html.bat  build_latex.bat  build_pdf.bat  build_rtd_requirements.bat  dev_requirements.txt  gpu_requirements.txt  requirements.txt  rtd_requirements.txt  temp_mot.rst  truncate_requirements.py
docs/source/: CalSciPy.bruker.constants.rst  CalSciPy.bruker.data.rst  CalSciPy.bruker.factories.rst  CalSciPy.bruker.meta_objects.rst  CalSciPy.bruker.protocols.rst  CalSciPy.bruker.rst  CalSciPy.bruker.validation.rst  CalSciPy.bruker.xml_mappings.rst  CalSciPy.bruker.xml_mappings.xml_mapping.rst  CalSciPy.bruker.xml_objects.rst  CalSciPy.color_scheme.rst  CalSciPy.conversion.rst  CalSciPy.events.event_visuals.rst  CalSciPy.events.firing_rates.rst  CalSciPy.events.rst  CalSciPy.images.image_processing.rst  CalSciPy.images.rst  CalSciPy.io.rst  CalSciPy.io_tools.rst  CalSciPy.misc.rst  CalSciPy.optogenetics.cgh.rst  CalSciPy.optogenetics.opto_objects.rst  CalSciPy.optogenetics.rst  CalSciPy.optogenetics.target_selection.rst  CalSciPy.organization.rst  CalSciPy.reorganization.rst  CalSciPy.roi_tools.roi_tools.rst  CalSciPy.roi_tools.rst  CalSciPy.roi_tools.suite2p_handler.rst  CalSciPy.rst  CalSciPy.traces.baseline.rst  CalSciPy.traces.rst  CalSciPy.traces.trace_processing.rst  CalSciPy.traces.trace_visuals.rst  CalSciPy.validators.rst  CalSciPy.version.rst  Development Tools.rst  Installation.rst  Introduction.rst  Limitations.rst  (+29 more)
scratch/: gg.py
scratch_dev/: XXX.py  block.py  coloring_old.py  colorizer.py  stimulation_test.py  testing_mp_preview.py  visualize_optogenetics.py  xml_load.py
scratch_dev/tests/: old_test_io.py  test_bruker.py
scratch_dev/variables/: dfof_even_sample_traces.npy  rescale_reference.npy
src/: __init__.py
src/CalSciPy/: __init__.py  _backports.py  _calculations.py  _colors.py  _files.py  _helpers.py  _interactive.py  _interactive_visuals.py  _parsing.py  _style.py  _validation.py  _validators.py  _visual.py  binner.py  bruker.py  color_scheme.py  coloring.py  conversion.py  event_processing.py  factory_interactive.py  image_processing.py  interactive.py  interactive_visuals.py  io.py  io_tools.py  io_tools2.py  misc.py  optogenetics.py  parsing.py  reorganization.py  roi_tools.py  rpg2.py  style.mplstyle  style.py  temp_fun.py  trace_processing.py  validation.py  validators.py  version.py  visualize.py
src/PyCal/: io.py
testing/: test_imaging_io.py  test_reorganization.py
tests/: __init__.py  conftest.py  helper_scripts.py  helpers.py  test_a_install.py  test_bruker.py  test_calculations.py  test_color_scheme.py  test_coloring.py  test_conversion.py  test_event_processing.py  test_events.py  test_events_events.py  test_filters.py  test_firing_rates.py  test_image_processing.py  test_images_filters.py  test_imaging_io.py  test_interactive_visuals.py  test_io_tools.py  test_misc.py  test_optogenetics.py  test_reorganization.py  test_roi_tools.py  test_static_visuals.py  test_trace_processing.py  test_traces.py  test_traces_baselines.py  test_traces_smoothing.py  test_user.py  test_validators.py  test_z_uninstall.py
(+307 files in other folders)
